--- a/surrogate/static/styles.css
+++ b/surrogate/static/styles.css
@@ -35,3 +35,18 @@
     object-fit: cover;
     margin-bottom: 15px;
 }
+
+.logo-bar {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+    gap: 20; /* spacing between icon and settings */
+  }
+  
+  .custom-icon {
+    width: 295;
+    height: 78;
+    cursor: pointer;
+  }
